# true-real-estate-classifier

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  follow-up-update.md  pyproject.toml  simulation-results.md  stress-output.txt  stress-test-results-2026-01-30.md  Основной скрипт для переписок .docx
.claude/commands/: orch_plan_w_scouts_build_review.md  plan.md  plan_w_scouters.md  telegram_conversation_automatic_test.md  telegram_conversation_manual_test.md
.claude/hooks/: stop.py
ai_docs/anthropic/: .meta.json  build-with-claude--message-batches.md  build-with-claude--prompt-engineering--overview.md  index.md  initial-setup.md
ai_docs/httpx/: .meta.json  advanced--clients.md  async.md  index.md  quickstart.md
ai_docs/pydantic/: .meta.json  concepts--fields.md  concepts--models.md  index.md
app_fix_reports/: fix_2026-02-10T18-00.md
deployment/docker/: Dockerfile  Dockerfile.outreach  Dockerfile.registry  (+1 more)
docs/: configuration-guide.md  ЛичныйКакФоллоуАпитьТонОфВойс.md
knowledge_base/: index.md  pipeline_report.md  questions.md
knowledge_base_final/: 00_MASTER_CHEATSHEET.md  01_BALI_GEOGRAPHY.md  03_TAX_GUIDE.md  05_SALES_TOOLKIT.md  06_MARKET_ANALYSIS.md  07_OPEN_QUESTIONS.md  10_RISK_TAXONOMY.md
scripts/: extract_pdf.py  extract_screenshots.py  gemini_analyze_with_wait.py  orchestrate_pipeline.py  process_video.py  run_migrations.py  setup_knowledge_base.py  synthesize_knowledge.py  validate_config.py
specs/: agent-sdk-to-claude-code-cli-migration.md  automated-communication-stress-test-scoring.md  chat-history-media-analysis.md  codebase-architecture-analysis-and-cleanup.md  codebase-refactoring-docker-optimization.md  context-memory-phrases-initial.md  database-driven-followup-daemon.md  docker-deployment-sales-registry.md  docker-deployment-skills-migration.md  docker-local-test-registered-reps-e2e.md  dynamic-message-delay-by-length.md  e2e-calendar-integration-testing.md  fix-calendar-event-organizer.md  fix-e2e-test-4-issues-review.md  fix-e2e-test-4-issues.md  fix-e2e-test-5-issues.md  fix-e2e-test-6-issues-review.md  fix-e2e-test-6-issues.md  fix-meeting-scheduling-flow.md  fix-meeting-scheduling-review.md  fix-telegram-agent-followup-critical-bugs.md  fix-time-setting-communication.md  how-to-communicate-skill.md  human-like-polish-timing-typos.md  improve-time-conversation-natural-ranges-timezone.md  integration-all-modules-daemon.md  manual-testing-bohdan-accounts-setup.md  media-e2e-test-plan.md  media-e2e-test-review.md  media-handling-voice-photo.md  message-batching-human-like-response.md  message-events-edit-delete-forward-reply.md  multi-message-test-and-calendar-description.md  natural-followup-behavior-improvements.md  realistic-multi-message-conversation-patterns.md  reddit-account-warming-docker-daemon.md  remove-keyword-matching-from-conversation-engine.md  repo-streamline-deployable-telegram-bot.md  sales-rep-registry-telegram-bot.md  scheduled-follow-ups-and-smart-reminders.md  (+17 more)
(+303 files in other folders)
