[project]
name = "classifier"
version = "0.1.0"
description = "True Real Estate Classifier with Telegram Agent"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "telethon>=1.42.0",
    "rich>=13.0.0",
    "defusedxml>=0.7.1",
    "lxml>=6.0.2",
    "pdfplumber>=0.11.9",
    "claude-agent-sdk>=0.1.19",
    "google-api-python-client>=2.188.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.2.4",
    "pytz>=2025.2",
    "apscheduler>=4.0.0a5",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "tiktoken>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
bot = [
    "python-telegram-bot>=21.0.0",
]

[project.scripts]
test-agent = "sales_agent.testing.manual_test:main"

[tool.uv]
package = true
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sales_agent"]
